--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -12,7 +12,7 @@ div {
 
 .col-xs-1 {
     width: 100px;
-    border: 2px solid black;
+    /*border: 2px solid black;*/
 }
 
 .row:nth-child(odd) div:nth-child(odd) {
@@ -23,49 +23,45 @@ div {
     background-color: darkgrey;
 }
 
-.piece-space {
-    background-color: red !important;
-}
-
-.target-space {
-    background-color: green !important;
-}
-
-/*.white-king {
-    background-image: url('/../img/whiteking.png');
+.white-king {
+    background-image: url('/../img/whiteking.png') !important;
 }
 
 .black-king {
-    background-image: url('/../img/blackking.png');
+    background-image: url('/../img/blackking.png') !important;
 }
 
 .white-queen {
-    background-image: url('/../img/whitequeen.png');
+    background-image: url('/../img/whitequeen.png') !important;
 }
 .black-queen {
-    background-image: url('/../img/blackqueen.png');
+    background-image: url('/../img/blackqueen.png') !important;
 }
 
 .white-knight {
-    background-image: url('/../img/whiteknight.png');
-}*/
-
-.black-knight {
-    background-image: url('/../img/blackknight.png');
+    background-image: url('/../img/whiteknight.png') !important;
 }
 
-/*.white-bishop {
-    background-image: url('/../img/whitebishop.png');
+.black-knight {
+    background-image: url('/../img/blackknight.png') !important;
+}
+
+.white-bishop {
+    background-image: url('/../img/whitebishop.png') !important;
 }
 
 .black-bishop {
-    background-image: url('/../img/blackbishop.png');
+    background-image: url('/../img/blackbishop.png') !important;
 }
 
 .black-rook {
-    background-image: url('/../img/blackrook.jpg');
+    background-image: url('/../img/blackrook.jpg') !important;
 }
 
 .white-rook {
-    background-image: url('/../img/whiterook.png');
-}*/
+    background-image: url('/../img/whiterook.png') !important;
+}
+
+.active-piece {
+    border: 4px solid green;
+}
